[project]
name = "practiso-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.23.1",
    "practiso-sdk>=0.3.0",
]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
reportUnusedCallResult = false
reportUnknownMemberType = false

